# ExcelConverter

./: README.md  config.toml  pyproject.toml  run_tests.py
docs/: CLI使用指南.md
excel/: achievements.xlsx  equipment.xlsx  items.xlsx
excel_converter/: __init__.py  __main__.py  cli.py  main.py
excel_converter/config/: __init__.py  config_manager.py  validator.py
excel_converter/core/: __init__.py  data_merger.py  data_processor.py  excel_reader.py  type_system.py
excel_converter/formatters/: __init__.py  base.py  json_formatter.py  json_variants.py  lua_formatter.py
excel_converter/utils/: __init__.py  error_handler.py  file_utils.py  logger.py  scope_utils.py
excel_converter/validators/: __init__.py  validator_engine.py
fixtures/config/: invalid_config.toml  test_config.toml
fixtures/excel/: invalid_format.xlsx  multi_sheet.xlsx  test_items.xlsx
fixtures/expected_output/: test_items.json  test_items.lua
fixtures/validators/: broken_validator.py  test_validator.py
output/: achievements.json  achievements.lua  items.json  items.lua
tests/: __init__.py  test_cli.py  test_config.py  test_formatters.py  test_integration.py  test_validators.py
validators/: array_length.py  enum.py  length.py  pattern.py  range.py  required.py  resource.py  reward_config.py  unique.py
